continuing the JavaFX migration